--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -8,7 +8,13 @@ glx-use-copysubbuffer-mesa = true;
 /*enable vsync, so there will be no more stutter or whatsoever*/
 
 vsync = true;
-corner-radius = 5;
+
+/*rounded corners*/
+
+corner-radius = 5.0;
+rounded-corners-exclude = [
+  "class_g =  'Polybar'"
+]
 
 /*starting from here, below are performance-hogging config*/
 
@@ -32,9 +38,9 @@ corner-radius = 5;
 /*};*/
 
 /*fading = true;*/
-/*fade-in-step = 0.02;*/
-/*fade-out-step = 0.02;*/
-/*fade-delta = 2;*/
+/*fade-in-step = 0.01;*/
+/*fade-out-step = 0.01;*/
+/*fade-delta = 1;*/
 /*no-fading-destroyed-argb = true;*/
 
 
