--- a/config/polybar/config
+++ b/config/polybar/config
@@ -7,7 +7,7 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #cc252525
+background = #dd252525
 ;background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #ebdbb2
@@ -50,7 +50,7 @@ font-4 = "Noto Sans CJK JP:size=12;2"
 font-5 = "siji:pixelsize=12;1"
 
 modules-left = powermenu i3 xwindow
-modules-center = date 
+modules-center = date
 modules-right = wlan eth alsa battery 
 
 tray-position = none
@@ -266,7 +266,7 @@ interval = 5
 date = 
 date-alt = "%Y-%m-%d"
 
-time = %a %e %b %I:%M %p 
+time = %I:%M %p 
 time-alt = %H:%M:%S
 
 format-prefix = 
@@ -352,25 +352,25 @@ format-discharging-padding = 0
 label-charging = %percentage%%]
 label-discharging = 
 
-label-full = [%{F#989719}CHARGED%{F-}]
+label-full = [%{F#989719}charged%{F-}]
 label-full-background = ${color.shade5}
 label-full-foreground = $(color.modulefg)
 label-full-padding = 0
 
-ramp-capacity-0 = 
+ramp-capacity-0 = [dead]
 ramp-capacity-0-foreground = #fb4833
-ramp-capacity-1 = 
+ramp-capacity-1 = [dying]
 ramp-capacity-1-foreground = #fb4833
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-2 = [normal]
+ramp-capacity-3 = [normal]
+ramp-capacity-4 = [FULL]
 
-animation-charging-0 = [%{F#989719}Ch%{F-}arging:
-animation-charging-1 = [Ch%{F#989719}ar%{F-}ging:
-animation-charging-2 = [Char%{F#989719}gi%{F-}ng:
-animation-charging-3 = [Chargi%{F#989719}ng%{F-}:
-animation-charging-4 = [Char%{F#989719}gi%{F-}ng:
-animation-charging-5 = [Ch%{F#989719}ar%{F-}ging:
+animation-charging-0 = [%{F#989719}ch%{F-}arging:
+animation-charging-1 = [ch%{F#989719}ar%{F-}ging:
+animation-charging-2 = [char%{F#989719}gi%{F-}ng:
+animation-charging-3 = [chargi%{F#989719}ng%{F-}:
+animation-charging-4 = [char%{F#989719}gi%{F-}ng:
+animation-charging-5 = [ch%{F#989719}ar%{F-}ging:
 
 animation-charging-framerate = 500
 
