--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -139,7 +139,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme default
+set colorscheme solarized
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -148,7 +148,7 @@ set preview_directories true
 set collapse_preview true
 
 # Wrap long lines in plain text previews?
-set wrap_plaintext_previews false
+set wrap_plaintext_previews true
 
 # Save the console history on exit?
 set save_console_history true
@@ -164,10 +164,10 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+set draw_borders both
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
@@ -344,6 +344,11 @@ alias travel     scout -aefklst
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
+
+map BH cd /home/raihan/
+map USB cd /run/media/
+map DOC cd /home/raihan/Documents
+map DOWN cd /home/raihan/Downloads
 
 # Basic
 map     Q quitall
