--- a/config/starship.toml
+++ b/config/starship.toml
@@ -4,19 +4,19 @@ add_newline = false
 disabled = false
 
 [character]                            
-success_symbol = "[](bold green)"    
-error_symbol = "[](bold red)"
-vicmd_symbol = "[](bold blue)"
+# this is kinda edgy ig
+#success_symbol = "[](bold green)"    
+#error_symbol = "[](bold red)"
+#vicmd_symbol = "[](bold blue)"
 
 [username]
-style_user = "white bold"
-style_root = "black bold"
-format = "[raihan]($style) "
-disabled = false
+style_user = "yellow bold"
+style_root = "red bold"
+format = "[$user]($style) "
 show_always = true
 
 [package]
-disabled = true
+disabled = false
 
 [directory]
 read_only = "  "
