throttleStop: update offset and cache voltage

--- a/windows_stuff/throttlestop/throttleStop.ini
+++ b/windows_stuff/throttlestop/throttleStop.ini
@@ -1,11 +1,11 @@
 [ThrottleStop]
 StartFailed=0
-FileName=C:\Users\Raihan\Documents\ThottleStop\ThrottleStop.ini
-GUID0={B7727C49-36BC-454F-A019-CFAC49A837B2}
-GUID1={40B5A24B-E0E6-4E68-A2A3-CC9BF3709F28}
-GUID2={6B4A9FCB-0CAB-4CCF-9CE1-C11CBD62121D}
-GUID3={C5AEE6DC-3A05-4DBF-A175-316DA43E5A1E}
-GUID4={05F532AD-7F07-4C32-A183-5B677B123372}
+FileName=C:\Users\Raihan\Documents\ThrottleStop\ThrottleStop.ini
+GUID0={93308140-2F1C-420A-9E3F-4967A17E0904}
+GUID1={2C5B4164-C94C-4BCA-9FA6-4ECA55A0EF16}
+GUID2={F978FA8C-19CE-42D0-A0C6-9BE40BB3A809}
+GUID3={5FFB6233-F81A-469D-8311-0464FA5D5FA1}
+GUID4={E7E7E792-F7CA-46DC-A3F1-585CFE40ADAA}
 DTSAlarm=1
 GPUAlarm=105
 LowBattPercent=0
@@ -47,7 +47,7 @@ NoTitleBar=0
 ZeroChipset=0
 TimePeriodAC=16
 WinProfile=0xA988
-PROCHOT_Offset=0x5
+PROCHOT_Offset=0x10F
 NewCStateLimit=0x5555
 HaswellOverclock=0
 PROCHOT_Lock=0
@@ -137,10 +137,10 @@ MiniMode=0
 SuperMiniMode=0
 StopMonitoring=0
 RowHeight=20
-POWERLIMITEAX=0xDC8230
-POWERLIMITEDX=0x4282D0
-PP0POWERLIMITEAX=0x0
-TDPLevel=0
+POWERLIMITEAX=0x00DC8230
+POWERLIMITEDX=0x004282D0
+PP0POWERLIMITEAX=0x00000000
+TDPLevel=0x00000000
 TDPLevelControl=0
 LockPL3=1
 PowerBalancePP0=16
@@ -150,7 +150,7 @@ CurrentLimitPP0=1120
 SpeedShift=0
 SSTMin=1
 SSTMax=45
-FIVRVoltage00=0xE5200000
+FIVRVoltage00=0xE7A00000
 UnlockVoltage00=1
 FIVRVoltage01=0x00000000
 UnlockVoltage01=1
@@ -158,7 +158,7 @@ FIVRVoltage02=0xE5000000
 UnlockVoltage02=1
 FIVRVoltage03=0xEB800000
 UnlockVoltage03=1
-FIVRVoltage10=0xFE600000
+FIVRVoltage10=0xF2E00000
 UnlockVoltage10=1
 FIVRVoltage11=0x00000000
 UnlockVoltage11=0
@@ -166,7 +166,7 @@ FIVRVoltage12=0x00000000
 UnlockVoltage12=0
 FIVRVoltage13=0xFAA00000
 UnlockVoltage13=1
-FIVRVoltage20=0xF0A00000
+FIVRVoltage20=0xF1400000
 UnlockVoltage20=1
 FIVRVoltage21=0x00000000
 UnlockVoltage21=1
@@ -276,3 +276,6 @@ MFItalic=0
 MFQuality=6
 MFFaceName=Segoe UI Semibold
 
+PowerLimit4=0x00000518
+NoSetPL=1
+RingDownBin=0xF
