--- a/config/polybar/config
+++ b/config/polybar/config
@@ -19,13 +19,13 @@ alert = #bd2c40
 [bar/main]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 30
+height = 24
 ;offset-x = 2%
 ;offset-y = 1%
 ;override-redirect = true
 ;radius = 5.0
 fixed-center = true
-;bottom = true
+bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -42,8 +42,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Cascadia Mono:size=12;2"
-font-1 = "CaskaydiaCove NF:size=20;4"
+font-0 = "Cascadia Mono:size=11;2"
+font-1 = "CaskaydiaCove NF:size=20;3"
 font-2 = "Material Icons:size=11;2"
 font-3 = "unifont:fontformat=truetype:size=12:antialias=false;0"
 font-4 = "Noto Sans CJK JP:size=12;2"
